[tool.poetry]
name = "mle"
version = "0.1.0"
description = ""
authors = ["Sigmund"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.2.4"
cloudpickle = "^1.6.0"
graphviz = "^0.16"
joblib = "^1.0.1"
jupyterlab = "^3.0.16"
llvmlite = "^0.36.0"
nltk = "^3.6.2"
numba = "^0.53.1"
networkx = "^2.5.1"
pydot = "^1.4.2"
requests = "^2.25.1"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
sympy = "^1.8"
tqdm = "^4.61.0"
bokeh = "^2.3.2"
econml = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
